fixed ulclone layer to be behind ulreal for nav contact open bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -162,7 +162,7 @@ body {
     list-style: none;
     padding: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
 }
 
@@ -346,7 +346,7 @@ li {
   transition: 350ms ease-in-out;
   transform: translateY(10%);
   width: 21rem;
-  background-color: rgba(0,0,0, .25);
+  background-color: rgba(255, 94, 98, .50);
   border-radius: 10px;
   a {
     color: white;
