--- a/src/Responsive.scss
+++ b/src/Responsive.scss
@@ -401,10 +401,10 @@ $linearwhite: linear-gradient(90deg, rgba(251,252,255,1) 0%, rgba(218,233,255,.9
   .navbar-top {
     background-color: rgba(0,0,0, .25);
     height: 7vh;
-    z-index: 100;
-  }
-  .navbar-top ul {
     z-index: 300;
+  }
+  .navbar-top .ulReal {
+    z-index: 400;
     width: 100vw;
     justify-content: space-evenly;
   }
